# dexscreener-rs

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  deny.toml
.github/workflows/: release-plz.yml
examples/: get_pair_by_token_address.rs  get_pairs_by_chain_and_address.rs  get_pairs_by_token_addresses.rs  search_pairs.rs
src/: client.rs  errors.rs  lib.rs  models.rs
tests/: integration_test.rs  models_test.rs
